--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-Projects/node_modules
-Projects/JavaScript
+JS/node_modules
+JS/JavaScript
 /.pnp
-Projects/db-1647978750005.json
-Projects/css/styleSsssS.css
+JS/db-1647978750005.json
+JS/css/styleSsssS.css
 
 # testing
 /coverage
 
-# production
+# productiongi
 /build
 
 # misc
